--- a/styles/header.css
+++ b/styles/header.css
@@ -2,13 +2,23 @@
   position: fixed;
   z-index: 50;
   width: 100%;
-  background-color: var(--background-primary);
+  background-color: transparent;
+  border-bottom: 1px solid;
+  border-color: transparent;
+  transition: border-color 300ms ease-in-out, background-color 300ms ease-in-out;
+}
+
+/* Switch to fixed positioning, and stick the header to the top of the page */
+html:not([data-scroll="0"]) header {
+  backdrop-filter: blur(4px);
+  border-color: hsla(0, 0%, 100%, 0.1);
+  background-color: hsl(159, 12%, 59%, 0.5);
 }
 
 .header__wrapper {
   max-width: 1720px;
   margin: 0 auto;
-  padding: 1rem 1.5rem;
+  padding: 1.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
