--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 @import "reset.css";
 @import "header.css";
 @import "hero.css";
+@import "about.css";
+@import "projects.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Petrona:wght@300;400;500;600;700&display=swap");
 
@@ -11,4 +13,31 @@ html {
 :root {
   --background-primary: hsl(159, 12%, 59%);
   --background-secondary: hsl(159, 18%, 72%);
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+.section-title {
+  text-align: center;
+  width: fit-content;
+}
+
+.section-title__title {
+  font-size: 3rem;
+  color: white;
+  font-weight: 400;
+}
+
+.section-title__divider {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+
+.section-title__subtitle {
+  color: white;
+  font-size: 2.25rem;
+  font-weight: 400;
 }
