--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@
 /* Switch to fixed positioning, and stick the header to the top of the page */
 html:not([data-scroll="0"]) header {
   backdrop-filter: blur(4px);
-  border-color: hsla(0, 0%, 100%, 0.1);
+  border-color: hsla(0, 0%, 100%, 0.2);
   background-color: hsl(159, 12%, 59%, 0.5);
 }
 
@@ -27,6 +27,7 @@ html:not([data-scroll="0"]) header {
 .header__logo {
   height: auto;
   width: 48px;
+  transition: opacity 150ms ease-in-out;
 }
 
 .header__nav :not(:last-child) {
@@ -40,6 +41,7 @@ html:not([data-scroll="0"]) header {
   transition: opacity 150ms ease-in-out;
 }
 
-.header__navlink:hover {
+.header__navlink:hover,
+.header__logo:hover {
   opacity: 0.7;
 }
