--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,20 +6,47 @@
       var(--background-secondary) 0%,
       var(--background-primary) 100%
     );
+  position: relative;
+  overflow: hidden;
+}
+
+.projects__circle {
+  border-radius: 50%;
+  background: radial-gradient(
+    68.52% 68.52% at 30.21% 31.48%,
+    rgba(137, 163, 154, 0.49) 0%,
+    rgba(137, 163, 154, 0) 100%
+  );
+  width: 580px;
+  height: 580px;
+  position: absolute;
+}
+
+.projects__circle-1 {
+  top: 20%;
+}
+
+.projects__circle-2 {
+  top: 60%;
+  right: 0;
 }
 
 .projects__wrapper {
   max-width: 1720px;
+  height: 100%;
   margin: 0 auto;
   padding: 5rem 1.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
 .projects__cards-wrapper {
   display: flex;
   width: 100%;
+  margin-top: 6rem;
+  z-index: 10;
 }
 
 .projects__cards-wrapper :not(:last-child) {
@@ -28,6 +55,7 @@
 
 .projects__card {
   width: 100%;
+  height: 400px;
   padding: 2rem;
   background: radial-gradient(
     64.95% 64.95% at 50% 50%,
@@ -38,8 +66,43 @@
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   transition: box-shadow 300ms ease-in-out;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
 }
 
 .projects__card:hover {
   box-shadow: 0px 0px 48px rgba(0, 0, 0, 0.1);
+}
+
+.projects__card-title {
+  color: white;
+  font-size: 2.25rem;
+  font-weight: 400;
+}
+
+.projects__card-divider {
+  width: 100%;
+  height: 1px;
+  background-color: white;
+}
+
+.projects__card-description {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.project__card-image-wrapper {
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.projects__card-image {
+  position: absolute;
+  top: -50%;
 }
