--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,10 @@
 @import "hero.css";
 @import "about.css";
 @import "projects.css";
+@import "footer.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Petrona:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 html {
   font-family: "Petrona", Times, serif;
@@ -32,7 +34,8 @@ html {
 
 .section-title__divider {
   width: 100%;
-  height: 2px;
+  height: 1px;
+  margin-bottom: 0.25rem;
   background-color: white;
 }
 
