--- a/styles/projects.css
+++ b/styles/projects.css
@@ -61,7 +61,7 @@
 .projects__card {
   width: 100%;
   height: 450px;
-  padding: 2rem;
+  padding: 3rem 2rem;
   background: radial-gradient(
     64.95% 64.95% at 50% 50%,
     rgba(235, 255, 248, 0.42) 0%,
