--- a/styles/about.css
+++ b/styles/about.css
@@ -35,7 +35,7 @@
 
 .about__category {
   list-style: none;
-  color: rgba(255, 255, 255, 0.65);
+  color: rgba(255, 255, 255, 0.4);
   transition: color 150ms linear;
 }
 
@@ -81,6 +81,17 @@
   background-color: var(--background-secondary);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 3rem;
   width: 600px;
+  position: relative;
+  overflow: hidden;
+}
+
+.about__img {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 150ms linear;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
