feat: projects images and descriptions

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -61,13 +61,13 @@
 .projects__card {
   width: 100%;
   height: 450px;
-  padding: 3rem 2rem;
+  padding: 2.5rem 2rem;
   background: radial-gradient(
     64.95% 64.95% at 50% 50%,
     rgba(235, 255, 248, 0.42) 0%,
     rgba(174, 199, 190, 0.42) 100%
   );
-  border: 1px solid rgba(255, 255, 255, 0.31);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   transition: box-shadow 300ms ease-in-out;
@@ -84,30 +84,84 @@
   color: white;
   font-size: var(--text-4xl);
   font-weight: 400;
+  margin-bottom: 0.5rem;
 }
 
 .projects__card-divider {
   width: 100%;
   height: 1px;
   background-color: white;
+  margin-bottom: 0.75rem;
 }
 
 .projects__card-description {
   color: white;
-  font-size: var(--text-2xl);
-}
-
-.project__card-image-wrapper {
-  position: absolute;
-  height: 270px;
+  font-size: var(--text-lg);
+  font-family: var(--font-sans);
   width: 100%;
-  left: 0;
-  bottom: 0;
-  overflow: hidden;
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .projects__card-image {
   position: absolute;
-  top: -50%;
+  left: 0;
+  right: 0;
+  top: 50%;
+  height: 100%;
+  background-size: contain;
+  background-image: linear-gradient(
+      to bottom,
+      transparent 10%,
+      var(--background-primary) 100%
+    ),
+    url("/resources/project-1.png");
+  background-repeat: no-repeat;
+  transition: top 250ms ease-out;
+}
+
+.projects__card:hover .projects__card-image {
+  top: 0;
+}
+
+.projects__card:hover
+  :is(
+    .projects__card-title,
+    .projects__card-description,
+    .projects__card-divider
+  ) {
+  transform: scale(0.97);
+}
+
+.projects__card-title,
+.projects__card-description,
+.projects__card-divider {
+  transition: transform 200ms ease-in-out;
+}
+
+.projects__card-image-1 {
+  background-color: #f9f9a5;
+  background-image: linear-gradient(
+      to bottom,
+      transparent 10%,
+      var(--background-primary) 100%
+    ),
+    url("/resources/project-1.png");
+}
+
+.projects__card-image-2 {
+  background-color: #fab260;
+  background-image: linear-gradient(
+      to bottom,
+      transparent 10%,
+      var(--background-primary) 100%
+    ),
+    url("/resources/project-2.png");
+}
+
+.projects__card-image-3 {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 10%,
+      var(--background-primary) 100%
+    ),
+    url("/resources/project-1.jpg");
 }
