--- a/styles/projects.css
+++ b/styles/projects.css
@@ -61,7 +61,6 @@
 .projects__card {
   width: 100%;
   height: 450px;
-  padding: 2.5rem 2rem;
   background: radial-gradient(
     64.95% 64.95% at 50% 50%,
     rgba(235, 255, 248, 0.42) 0%,
@@ -78,6 +77,11 @@
 
 .projects__card:hover {
   box-shadow: 0px 0px 48px rgba(0, 0, 0, 0.1);
+}
+
+.projects__content-wrapper {
+  padding: 2.5rem 2rem;
+  transition: transform 300ms ease-in-out, filter 300ms ease-in-out;
 }
 
 .projects__card-title {
@@ -103,65 +107,14 @@
 
 .projects__card-image {
   position: absolute;
+  padding-top: 24px;
+  padding-left: 2rem;
   left: 0;
   right: 0;
-  top: 50%;
-  height: 100%;
-  background-size: contain;
-  background-image: linear-gradient(
-      to bottom,
-      transparent 10%,
-      var(--background-primary) 100%
-    ),
-    url("/resources/project-1.png");
-  background-repeat: no-repeat;
-  transition: top 250ms ease-out;
+  will-change: transform;
 }
 
-.projects__card:hover .projects__card-image {
-  top: 0;
-}
-
-.projects__card:hover
-  :is(
-    .projects__card-title,
-    .projects__card-description,
-    .projects__card-divider
-  ) {
-  transform: scale(0.97);
-}
-
-.projects__card-title,
-.projects__card-description,
-.projects__card-divider {
-  transition: transform 200ms ease-in-out;
-}
-
-.projects__card-image-1 {
-  background-color: #f9f9a5;
-  background-image: linear-gradient(
-      to bottom,
-      transparent 10%,
-      var(--background-primary) 100%
-    ),
-    url("/resources/project-1.png");
-}
-
-.projects__card-image-2 {
-  background-color: #fab260;
-  background-image: linear-gradient(
-      to bottom,
-      transparent 10%,
-      var(--background-primary) 100%
-    ),
-    url("/resources/project-2.png");
-}
-
-.projects__card-image-3 {
-  background-image: linear-gradient(
-      to bottom,
-      transparent 10%,
-      var(--background-primary) 100%
-    ),
-    url("/resources/project-1.jpg");
+.projects__card:hover .projects__content-wrapper {
+  transform: scale(0.9);
+  filter: blur(1.5px);
 }
